hphp/hack/test/typecheck/references/refs_in_array/pass_by_ref.php.exp
File "pass_by_ref.php", line 7, characters 14-17:
Only variables, members, and the results of function calls can be used as references (Parsing[1002])
